fix nav link color on mobile for dropdown

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,9 +1,6 @@
 @import '../base/colors';
 
-.guest {
-  background-color: #363cb6;
-  color: white;
-}
+
 
 .nav-left li {
   float: left;
@@ -50,7 +47,18 @@
   padding: 8px;
   border-radius: 3px;
   cursor: pointer;
+  color: black;
+}
+
+.guest {
+  background-color: #363cb6;
   color: white;
+}
+
+@media screen and (min-width: 750px) {
+  .nav-link {
+    color: white;
+  }
 }
 
 .nav-link-pic {
